integrate port number and packaje.json info

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "server",
+  "name": "generate-pdf-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "this is a test",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
-    "node": "12.x"
+    "node": "10.x"
   },
   "author": "",
   "license": "ISC",
@@ -17,5 +17,14 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "html-pdf": "^2.2.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pablobvch/generate-pdf-backend.git"
+  },
+  "bugs": {
+    "url": "https://github.com/pablobvch/generate-pdf-backend/issues"
+  },
+  "homepage": "https://github.com/pablobvch/generate-pdf-backend#readme"
 }
