--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "html-pdf": "^2.2.0"
+    "html-pdf": "^2.2.0",
+    "phantomjs-prebuilt": "^2.1.16"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/pablobvch/generate-pdf-backend.git"
